# FinTrack-AI

./: .gitignore  README.md  fintrack.db  pyproject.toml
app/: main.py
app/api/: message_routes.py  routes.py  transaction_routes.py
app/auth/: auth_routes.py  auth_service.py  security.py
app/constants/: categories.py  intents.py  transaction_type.py
app/core/: config.py
app/database/: database.py
app/models/: expense.py  transaction.py  user.py
app/schemas/: transaction.py  user.py
app/services/: amount_extractor.py  balance_service.py  category_classifier.py  command_router.py  delete_transaction_service.py  description_extractor.py  expense_service.py  income_service.py  intent_classifier.py  list_transactions_service.py  max_expense_service.py  max_income_service.py  message_service.py  month_expense_service.py  month_income_service.py  query_classifier.py  query_service.py  today_expense_service.py  transaction_service.py  update_transaction_service.py
