[project]
name = "fintrack-ai"
version = "0.1.0"
description = "AI-powered personal finance assistant that understands natural language."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.1.3",
    "fastapi>=0.139.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.51.0",
]
